<resources>
    <string name="app_name">POS Mobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_acercaDe">Acerca de... </string>
    <string name="title_activity_compras">Compras</string>
    <string name="title_activity_ventas">Ventas</string>
    <string name="title_activity_referencias">Referencias</string>
    <string name="title_activity_crear_referencias">Crear Referencias</string>
    <string name="title_activity_reporte_compras">Reporte Compras</string>
    <string name="title_activity_reporte_ventas">Reporte Ventas</string>
    <string name="title_activity_reporte_referencias">Reporte Referencias</string>
    <string name="title_activity_usuarios">Usuarios</string>
    <string name="title_activity_crear_usuarios">Crear Usuarios</string>
    <string name="title_option_sesion">Sesión</string>
    <string name="title_option_captura">Captura</string>
    <string name="title_option_inventario">Inventario</string>
    <string name="title_option_reportes">Reportes</string>
    <string name="title_option_usuarios">Usuarios</string>
    <string name="title_activity_iniciar_sesion">Iniciar Sesion</string>
    <string name="title_activity_cerrar_sesion">Cerrar Sesion</string>
    <string name="title_activity_acerca_de">Acerca De..</string>
    <string name="InfoAcercaDe1">Aplicación desarrollada por Cristian Mejia y Santiago Serna.</string>
    <string name="InfoAcercaDe2">Esta aplicación tiene por objetivo evidenciar en la asignatura Proyecto Integrador los conocimientos adquiridos durante la carrera.</string>
    <string name="numeroDeIdentificaci_n">Número de Identificación</string>
    <string name="nombreDeUsuario">Nombre de usario</string>
    <string name="primerNombre">Primer Nombre</string>
    <string name="segundoNombre">Segundo Nombre</string>
    <string name="primerApellido">Primer Apellido</string>
    <string name="segundoApellido">Segundo Apellido</string>
    <string name="contrasena">Contrasena</string>
    <string name="codigoReferencia">Código referencia</string>
    <string name="nombreReferencia">Nombre referencia</string>
    <string name="descripcionReferencia">Descripción referencia</string>
    <string name="precioCompra">Precio compra</string>
    <string name="precioVenta">Precio venta</string>
    <string name="cantidadDisponible">Cantidad disponible</string>
    <string name="idTransaccion">Id Transacción</string>
    <string name="FechaTransaccion">Fecha Transacción</string>
    <string name="Bruto">Bruto</string>
    <string name="Neto">Neto</string>
    <string name="Descuento">Descuento</string>
    <string name="Usuario">Usuario</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="Nit">Nit</string>
    <string name="Cedula">Cédula</string>
    <string name="NombreAcreedor">Nombre Acreedor</string>
    <string name="NombreCliente">Nombre Cliente</string>
    <string name="Guardar">Guardar</string>
    <string name="title_fragment_compras">Compras</string>
    <string name="title_activity_compras_tabs">Compras</string>
    <string name="title_activity_ventas_tabs">Ventas</string>
</resources>