<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.posmobile.CrearUsuarios"
    tools:showIn="@layout/activity_crear_usuarios">


    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_crear_usuarios"
        android:textAlignment="center"
        android:textSize="@dimen/SizeTitle"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="471dp"
        android:layout_margin="24dp"
        tools:layout_editor_absoluteY="32dp"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/FieldsMargin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtNombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtNombreUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombreDeUsuario" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtPrimerNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtNombreUsuario">

                    <EditText
                        android:id="@+id/edtPrimerNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/primerNombre" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtPrimerApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPrimerNombre">

                    <EditText
                        android:id="@+id/edtPrimerApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/primerApellido" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtPrimerApellido">

                    <EditText
                        android:id="@+id/edtContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="Guardar"
                    android:id="@+id/bntGuardar"
                    android:layout_margin="@dimen/StdMargin"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_margin="@dimen/FieldsMargin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtNumeroIdentificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtNumeroIdentificacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/numeroDeIdentificaci_n" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtSegundoNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtNumeroIdentificacion">

                    <EditText
                        android:id="@+id/edtSegundoNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/segundoNombre" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtSegundoApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtSegundoNombre">

                    <EditText
                        android:id="@+id/edtSegundoApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/segundoApellido" />

                </android.support.design.widget.TextInputLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="Cancelar"
                    android:id="@+id/bntCancelar"
                    android:layout_margin="@dimen/StdMargin"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
