<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.posmobile.Compras"
    tools:showIn="@layout/activity_compras">

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_compras"
        android:textAlignment="center"
        android:textSize="@dimen/SizeTitle"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="471dp"
        android:layout_margin="24dp"
        tools:layout_editor_absoluteY="32dp"
        tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/FieldsMargin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtNit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtNit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Nit" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtNombreAcreedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNit">

                <EditText
                    android:id="@+id/edtNombreAcreedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/NombreAcreedor"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/txtNombreAcreedor">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listaReferenciasSeleccionadas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/StdMargin"
                    android:layout_marginBottom="@dimen/StdMaxMargin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/bntMostrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mostrar"/>

                <Button
                    android:id="@+id/bntGuardar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Guardar"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
