<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.posmobile.IniciarSesion"
    tools:showIn="@layout/activity_iniciar_sesion">

    <TextView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_iniciar_sesion"
        android:textAlignment="center"
        android:textSize="@dimen/SizeTitle"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="471dp"
        android:layout_margin="24dp"
        tools:layout_editor_absoluteY="32dp"
        tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/FieldsMargin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtNombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreDeUsuario" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNombreUsuario">

                <EditText
                    android:id="@+id/edtContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="IniciarSesion"
                android:id="@+id/bntGuardar"
                android:layout_margin="@dimen/StdMargin"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
