<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/StdMargin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/LblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:text="@string/nombreReferencia"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/fab_margin" />

    <TextView
        android:id="@+id/LblNombreData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblNombre"
        android:text="@string/nombreReferencia"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/LblDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LblNombreData"
        android:fontFamily="cursive"
        android:text="@string/descripcionReferencia"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/fab_margin" />

    <TextView
        android:id="@+id/LblDescripcionData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LblDescripcion"
        android:text="@string/descripcionReferencia"
        android:textColor="@color/colorAccent" />


    <TextView
        android:id="@+id/LblPrecioCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblDescripcionData"
        android:fontFamily="cursive"
        android:text="@string/precioCompra"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/fab_margin" />

    <TextView
        android:id="@+id/LblPrecioCompraData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblPrecioCompra"
        android:text="@string/precioCompra"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/LblPrecioVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblPrecioCompraData"
        android:fontFamily="cursive"
        android:text="@string/precioVenta"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/fab_margin" />

    <TextView
        android:id="@+id/LblPrecioVentaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblPrecioVenta"
        android:text="@string/precioVenta"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/LblCantidadDisponible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblPrecioVentaData"
        android:fontFamily="cursive"
        android:text="@string/cantidadDisponible"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/fab_margin" />

    <TextView
        android:id="@+id/LblCantidadDisponibleData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblCantidadDisponible"
        android:text="@string/cantidadDisponible"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/LblCantidadAPedir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblCantidadDisponibleData"
        android:fontFamily="cursive"
        android:text="Cantidad a pedir"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/fab_margin" />

    <EditText
        android:id="@+id/EdtCantidadAPedir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LblCantidadAPedir"
        android:inputType="number"
        android:textColor="@color/colorPrimary" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fltAditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fltSeleccionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/StdMargin"
        app:srcCompat="@android:drawable/ic_input_add" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1px"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>